# exifmate

./: .gitignore  README.md  biome.json  build-exiftool.sh  build-exiftool.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  release.yml
__mocks__/@tauri-apps/: plugin-shell.ts
src/: ImageContext.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  metadata_handler.rs
src-tauri/src/thumbnails/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: thumbnails_test.rs
src/Editor/: ExifForm.tsx  ExifInput.tsx  ExifTab.tsx  LocationTab.tsx  MetadataEditor.tsx  useExif.tsx
src/ImageGrid/: GridList.tsx  ImageCard.tsx  ImageGrid.tsx
src/LocationTab/: LocationPasteButton.tsx  LocationTab.tsx  TheMap.tsx
src/SettingsModal/: SettingsForm.tsx  SettingsModal.tsx
src/Shell/: Notifications.tsx  Shell.tsx  Toolbar.tsx
src/Toasts/: ToastRegion.tsx  toast-queue.tsx
src/__specs__/: ImageContext.spec.tsx
src/components/: Center.tsx  Dialog.tsx  Fieldset.tsx  GridList.tsx  Modal.tsx  Tabs.tsx
src/core/: events.ts  file-manager.ts  metadata-handler.ts  types.ts
src/hooks/: useTauriListener.ts
src/metadata-handler/: exifdata.ts  exiftool.ts  read.ts  update.ts
src/platform/: app-menu.ts  error-reporter.ts  file-manager.ts  logging.ts  settings.ts
swift-thumbnails/: Package.resolved  Package.swift
test-support/: fake-images.ts  fixture-image.ts  vitest-setup.ts
(+59 files in other folders)
