[package]
name = "exifmate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "exifmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
swift-rs = { version = "1.0.5", features = ["build"] }
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
log = "0.4.28"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.5"

[target.'cfg(target_os = "linux")'.dependencies]
gdk-pixbuf = "0.21.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.60.0"
features = [
    "Win32_System_Com_StructuredStorage",
    "Win32_Foundation",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
]

